RESOLVED FIXED101314
Indentation of JSArray.h is wrong
https://bugs.webkit.org/show_bug.cgi?id=101314
Summary Indentation of JSArray.h is wrong
Filip Pizlo
Reported 2012-11-05 23:55:59 PST
Patch forthcoming.
Attachments
the patch (23.53 KB, patch)
2012-11-06 00:02 PST, Filip Pizlo
ap: review+
Filip Pizlo
Comment 1 2012-11-06 00:02:09 PST
Created attachment 172499 [details] the patch
WebKit Review Bot
Comment 2 2012-11-06 00:27:24 PST
Attachment 172499 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/runtime/JSArray.h:225: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2012-11-06 10:09:07 PST
Comment on attachment 172499 [details] the patch rs=me, assuming that this was a single Cmd+[ (or equivalent).
Filip Pizlo
Comment 4 2012-11-06 11:06:58 PST
(In reply to comment #3) > (From update of attachment 172499 [details]) > rs=me, assuming that this was a single Cmd+[ (or equivalent). Yup, it was. Thanks!
Filip Pizlo
Comment 5 2012-11-06 11:11:34 PST
Landed in http://trac.webkit.org/changeset/133645 I just realized that I wrote that it was "Reviewed by Alexey" rather than "Rubber stamped by Alexey". I will fix the changelog in a separate commit.
Filip Pizlo
Comment 6 2012-11-06 11:14:47 PST
Note You need to log in before you can comment on or make changes to this bug.