Indentation of JSArray.h is wrong https://bugs.webkit.org/show_bug.cgi?id=101314

Reviewed by Alexey Proskuryakov.

Just removing the indentation inside the namespace body.

* runtime/JSArray.h:



Canonical link: https://commits.webkit.org/119462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133645 268f45cc-cd09-0410-ab3c-d52691b4dbfc